WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161258
[Cocoa] Infinite recursion calling -charValue on a WKNSNumber
https://bugs.webkit.org/show_bug.cgi?id=161258
Summary
[Cocoa] Infinite recursion calling -charValue on a WKNSNumber
mitz
Reported
2016-08-26 12:28:31 PDT
Implemented the wrong primitive method. Patch forthcoming.
Attachments
Override -charValue, not -boolValue
(2.45 KB, patch)
2016-08-26 12:31 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Override -charValue, not -boolValue
(2.39 KB, patch)
2016-08-26 12:36 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2016-08-26 12:31:28 PDT
Created
attachment 287130
[details]
Override -charValue, not -boolValue
mitz
Comment 2
2016-08-26 12:36:13 PDT
Created
attachment 287132
[details]
Override -charValue, not -boolValue
mitz
Comment 3
2016-08-26 13:35:52 PDT
Fixed in <
https://trac.webkit.org/r205036
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug