[Cocoa] Infinite recursion calling -charValue on a WKNSNumber https://bugs.webkit.org/show_bug.cgi?id=161258

Reviewed by Anders Carlsson.

Source/WebKit2:

* Shared/Cocoa/WKNSNumber.mm:
(-[WKNSNumber charValue]): Override this…
(-[WKNSNumber boolValue]): …not this.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/WKNSNumber.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/179412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205036 268f45cc-cd09-0410-ab3c-d52691b4dbfc